change api startup