@@ -2,15 +2,18 @@ package startup;
 
 import javax.swing.*;
 import javax.swing.table.DefaultTableModel;
-import javax.swing.table.TableColumn;
-import javax.swing.table.TableRowSorter;
 import java.awt.*;
 import java.io.BufferedReader;
+import java.io.IOException;
+import java.io.InputStream;
 import java.io.InputStreamReader;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.StandardCopyOption;
+import java.util.ArrayList;
 import java.util.List;
 
 public class Apps extends JPanel {
-
     private JTable startupTable;
     private DefaultTableModel tableModel;
 
@@ -18,7 +21,7 @@ public class Apps extends JPanel {
         setLayout(new BorderLayout());
 
         // Create the table model with column names
-        String[] columnNames = {"Name", "Path", "Status"};
+        String[] columnNames = {"Name", "Description", "Publisher", "Path","Timestamp"};
         tableModel = new DefaultTableModel(columnNames, 0);
         startupTable = new JTable(tableModel);
 
@@ -27,75 +30,66 @@ public class Apps extends JPanel {
         add(scrollPane, BorderLayout.CENTER);
 
         fetchStartupApplications();
-
-        // Set column widths
-        TableColumn statusColumn = startupTable.getColumnModel().getColumn(2);
-        statusColumn.setPreferredWidth(80);
-
-        TableColumn nameColumn = startupTable.getColumnModel().getColumn(0);
-        nameColumn.setPreferredWidth(200);
-
-        // Enable sorting
-        TableRowSorter<DefaultTableModel> sorter = new TableRowSorter<>(tableModel);
-        startupTable.setRowSorter(sorter);
-        
-        // Set default sorting on the "Status" column in descending order
-        sorter.setSortKeys(List.of(new RowSorter.SortKey(2, SortOrder.DESCENDING)));
     }
 
     private void fetchStartupApplications() {
-        String osName = System.getProperty("os.name").toLowerCase();
-
-        if (osName.contains("win")) {
-            fetchWindowsStartupApplications();
-        } else if (osName.contains("nix") || osName.contains("nux") || osName.contains("mac")) {
-            fetchLinuxStartupApplications();
+        List<String[]> startupEntries = getAutorunsEntries();
+        for (String[] entry : startupEntries) {
+            tableModel.addRow(entry);
         }
     }
 
-    private void fetchWindowsStartupApplications() {
+    private List<String[]> getAutorunsEntries() {
+        List<String[]> entries = new ArrayList<>();
+        Path tempDir = null;
         try {
-            Process process = Runtime.getRuntime().exec("wmic startup get Caption, Command, Location");
+            // Create a temporary directory
+            tempDir = Files.createTempDirectory("autoruns");
+            // Extract autorunsc.exe to the temporary directory
+            Path autorunscPath = tempDir.resolve("autorunsc.exe");
+            try (InputStream is = getClass().getClassLoader().getResourceAsStream("autorunsc.exe")) {
+                if (is == null) {
+                    throw new IOException("autorunsc.exe not found in resources");
+                }
+                Files.copy(is, autorunscPath, StandardCopyOption.REPLACE_EXISTING);
+            }
+
+            
+            Process process = new ProcessBuilder(autorunscPath.toString(), "-accepteula", "l").start();
+            
             BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
             String line;
+            List<String> appDetails = new ArrayList<>();
 
-            while ((line = reader.readLine()) != null) {
-                if (line.trim().isEmpty() || line.contains("Caption")) {
-                    continue;
+            // Skip the first 8 lines directly
+            for (int i = 0; i < 8 && reader.readLine() != null; i++);
+
+            while ((line = reader.readLine().trim()) != null) {
+                if (line.isEmpty()) {
+                    continue;  
                 }
-                String[] parts = line.split("\\s{2,}");
-                if (parts.length >= 3) {
-                    String name = parts[0];
-                    String path = parts[1];
-                    String location = parts[2];
-                    String status = location.equals("HKLM\\SOFTWARE\\Microsoft\\Windows\\CurrentVersion\\Run") ? "Enabled" : "Disabled";
-                    tableModel.addRow(new Object[]{name, path, status});
+                if (line.length() > 3) {
+                    System.out.println(line);
+                    if (!(line.charAt(0) == 'H') && !(line.charAt(2) == 'K')) {
+                        appDetails.add(line);
+                    }     
                 }
-            }
-        } catch (Exception e) {
-            e.printStackTrace();
-        }
-    }
 
-    private void fetchLinuxStartupApplications() {
-        try {
-            String[] directories = {"/etc/init.d/", "~/.config/autostart/"};
-            for (String dir : directories) {
-                Process process = Runtime.getRuntime().exec("ls " + dir);
-                BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
-                String line;
+                if (appDetails.size() == 7) {
+                    String name = appDetails.get(0);
+                    String description = appDetails.get(2);
+                    String publisher = appDetails.get(3);
+                    String path = appDetails.get(5);
+                    String timestamp = appDetails.get(6);
 
-                while ((line = reader.readLine()) != null) {
-                    if (line.trim().isEmpty()) {
-                        continue;
-                    }
-                    String name = line;
-                    String path = dir + line;
-                    tableModel.addRow(new Object[]{name, path, "Enabled"}); // Assume enabled for Linux startup scripts
+                    entries.add(new String[]{name, description, publisher, path, timestamp});
+                    appDetails.clear();
                 }
             }
         } catch (Exception e) {
             e.printStackTrace();
-        }
+        } 
+        return entries;
     }
+
 }
