@@ -1,108 +1,94 @@
-package tabs;
+package startup;
 
 import javax.swing.*;
 import javax.swing.table.DefaultTableModel;
-import javax.swing.table.TableModel;
-import javax.swing.table.TableRowSorter;
 import java.awt.*;
 import java.io.BufferedReader;
+import java.io.IOException;
+import java.io.InputStream;
 import java.io.InputStreamReader;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.StandardCopyOption;
 import java.util.ArrayList;
 import java.util.List;
 
 public class TaskSchedule extends JPanel {
-
-    private String[] columnNames = {"Taskname", "Next run time", "Status", "Logon mode", "Hostname"};
-    private JTable table;
+    private JTable startupTable;
     private DefaultTableModel tableModel;
-    private JScrollPane sp;
-    private TableRowSorter<TableModel> sorter;
 
     public TaskSchedule() {
-        tableModel = new DefaultTableModel(columnNames, 0);
-        table = new JTable(tableModel);
-        sp = new JScrollPane(table);
-
-        sorter = new TableRowSorter<>(tableModel);
-        table.setRowSorter(sorter);
-
         setLayout(new BorderLayout());
-        add(sp, BorderLayout.CENTER);
 
-        Timer timer = new Timer(1000, e -> loadData());
-        timer.start();
+        // Create the table model with column names
+        String[] columnNames = {"Name", "Description", "Publisher", "Path","Timestamp"};
+        tableModel = new DefaultTableModel(columnNames, 0);
+        startupTable = new JTable(tableModel);
 
-        // Adjust column widths
-        table.getColumnModel().getColumn(0).setPreferredWidth(200); // Taskname
-        table.getColumnModel().getColumn(1).setPreferredWidth(150); // Next run time
-        table.getColumnModel().getColumn(2).setPreferredWidth(100); // Status
-        table.getColumnModel().getColumn(3).setPreferredWidth(150); // Logon mode
-        table.getColumnModel().getColumn(4).setPreferredWidth(50);  // Hostname
+        // Create a scroll pane for the table
+        JScrollPane scrollPane = new JScrollPane(startupTable);
+        add(scrollPane, BorderLayout.CENTER);
 
-        // Implementing header click sorting like the Processes panel
-        table.getTableHeader().addMouseListener(new java.awt.event.MouseAdapter() {
-            @Override
-            public void mouseClicked(java.awt.event.MouseEvent e) {
-                int column = table.columnAtPoint(e.getPoint());
-                if (sorter.getSortKeys().size() > 0 &&
-                        sorter.getSortKeys().get(0).getColumn() == column &&
-                        sorter.getSortKeys().get(0).getSortOrder() == SortOrder.DESCENDING) {
-                    sorter.setSortKeys(List.of(new RowSorter.SortKey(column, SortOrder.ASCENDING)));
-                } else {
-                    sorter.setSortKeys(List.of(new RowSorter.SortKey(column, SortOrder.DESCENDING)));
-                }
-            }
-        });
+        fetchStartupApplications();
     }
 
-    private void loadData() {
-        tableModel.setRowCount(0);
+    private void fetchStartupApplications() {
+        List<String[]> startupEntries = getAutorunsEntries();
+        for (String[] entry : startupEntries) {
+            tableModel.addRow(entry);
+        }
+    }
+
+    private List<String[]> getAutorunsEntries() {
+        List<String[]> entries = new ArrayList<>();
+        Path tempDir = null;
         try {
-            Process process = Runtime.getRuntime().exec("schtasks /query /fo LIST");
+            // Create a temporary directory
+            tempDir = Files.createTempDirectory("autoruns");
+            // Extract autorunsc.exe to the temporary directory
+            Path autorunscPath = tempDir.resolve("autorunsc.exe");
+            try (InputStream is = getClass().getClassLoader().getResourceAsStream("autorunsc.exe")) {
+                if (is == null) {
+                    throw new IOException("autorunsc.exe not found in resources");
+                }
+                Files.copy(is, autorunscPath, StandardCopyOption.REPLACE_EXISTING);
+            }
+
+            
+            Process process = new ProcessBuilder(autorunscPath.toString(), "-accepteula", "-t").start();
             BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
             String line;
-            List<String> taskData = new ArrayList<>();
+            List<String> appDetails = new ArrayList<>();
 
-            while ((line = reader.readLine()) != null) {
+            // Skip the first 8 lines directly
+            for (int i = 0; i < 8 && reader.readLine() != null; i++);
+
+            while ((line = reader.readLine().trim()) != null) {
                 if (line.isEmpty()) {
-                    if (!taskData.isEmpty()) {
-                        addRowToTable(taskData);
-                        taskData.clear();
-                    }
-                } else {
-                    taskData.add(line);
+                    continue;  
+                }
+                if (line.length() > 3) {
+                    System.out.println(line);
+                    if (!(line.charAt(0) == 'H') && !(line.charAt(2) == 'K')) {
+                        appDetails.add(line);
+                    }     
+                }
+
+                if (appDetails.size() == 7) {
+                    String name = appDetails.get(0);
+                    String description = appDetails.get(2);
+                    String publisher = appDetails.get(3);
+                    String path = appDetails.get(5);
+                    String timestamp = appDetails.get(6);
+
+                    entries.add(new String[]{name, description, publisher, path, timestamp});
+                    appDetails.clear();
                 }
             }
-
-            if (!taskData.isEmpty()) {
-                addRowToTable(taskData);
-            }
-
-            reader.close();
-            process.waitFor();
         } catch (Exception e) {
             e.printStackTrace();
-        }
+        } 
+        return entries;
     }
 
-    private void addRowToTable(List<String> taskData) {
-        String hostname = getValue(taskData, "HostName:");
-        String taskname = getValue(taskData, "TaskName:");
-        String nextRunTime = getValue(taskData, "Next Run Time:");
-        String status = getValue(taskData, "Status:");
-        String logonMode = getValue(taskData, "Logon Mode:");
-
-        tableModel.addRow(new Object[]{taskname, nextRunTime, status, logonMode, hostname});
-    }
-
-    private String getValue(List<String> taskData, String key) {
-        for (String line : taskData) {
-            if (line.startsWith(key)) {
-                return line.substring(key.length()).trim();
-            }
-        }
-        return "";
-    }
-
-    
 }
